// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions Card > should disable the \`Show More\` button if the card is in the loading state 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    aria-label="Loading"
    class="dusk-progress-bar data-card__progress-bar"
    role="progressbar"
  >
    <div
      class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
    />
  </div>
  
   
</div>
`;

exports[`Transactions Card > should disable the \`Show More\` button if there is no more data to display 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 10 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    class="data-card__content"
  >
    <div
      class="table-container transactions-table"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell align-left"
            >
              ID
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Gas
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Fee (DUSK)
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Status
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Type
            </th>
            
          </tr>
        </thead>
         
        <tbody
          class="table__body"
        >
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=4a4593a447ae768a20a28c534afd815f1f72965a7442eff71e62833047514552"
                >
                  4a4593a447...3047514552
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:55:25.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              50,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008221117
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=47ae464b9cf13bbf6e7307ecd0cc1a978094d7571bc6698c9bc5fe3e5facba66"
                >
                  47ae464b9c...3e5facba66
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:55:25.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              50,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008221117
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=225dae3745d75fa7bbae7e0294cb9626ff01bb4de697c0be31a3fc176b36ea41"
                >
                  225dae3745...176b36ea41
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:55:25.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              50,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008220846
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=03bae6e2e96709ebf41da7ca72353efca792723355332f467c0f32b3849de702"
                >
                  03bae6e2e9...b3849de702
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:55:25.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008221266
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=ed17ab505ab991e83194183b47b0ea8cd933e096c773767153414603a2b96964"
                >
                  ed17ab505a...03a2b96964
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:54:11.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008220422
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=cbac233a76cde9fdd129277e7368a2fdd99a5f390c2472e7f316151f4b53666c"
                >
                  cbac233a76...1f4b53666c
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:54:11.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008220926
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=a9abf02f549d21a89390eb18f5e91eeff95c21a4c6740dc30e113f2314152b5d"
                >
                  a9abf02f54...2314152b5d
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:54:11.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008221243
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=a7171542640d6b918928927ee814c147ec2c07c5f7990fe82796520084798b6f"
                >
                  a717154264...0084798b6f
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:54:11.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008220934
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=a171e5d05bd1e6478a4bcc7db4afd9d2e6430e5c3f94d49ffb71934776765465"
                >
                  a171e5d05b...4776765465
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:54:11.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008220989
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction__transaction-id-container"
              >
                <a
                  class="dusk-anchor dusk-anchor--on-surface transaction__link"
                  href="/some-base-path/transactions/transaction?id=8fff9d4eb4818bfd66cfaf41b01842f4fd75b0c50605e40fa8b1b1393ee0ac57"
                >
                  8fff9d4eb4...393ee0ac57
                </a>
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
               
              <time
                class="dusk-relative-time transaction__time"
                datetime="2024-09-11T21:54:11.000Z"
              >
                in 3 months
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0.008221018
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-success transaction-status"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="transaction-type"
              >
                <svg
                  class="dusk-icon dusk-icon--size--large transaction-type__icon"
                  data-tooltip-disabled="false"
                  data-tooltip-id="main-tooltip"
                  data-tooltip-place="top"
                  data-tooltip-text="Public"
                  data-tooltip-type="info"
                  role="graphics-symbol"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
                  />
                </svg>
                
                 
                <span
                  class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
                >
                  transfer
                </span>
                 
              </div>
            </td>
            
             
          </tr>
          
        </tbody>
      </table>
    </div>
    
  </div>
  
   
</div>
`;

exports[`Transactions Card > should hide the \`Show More\` button if an error has occurred 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 0 Displayed Items
    </h1>
     
  </header>
   
  <div
    class="alert"
  >
    <svg
      class="dusk-icon dusk-icon--size--large"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
      />
    </svg>
    
     
    <header>
      <p>
        There was an error fetching the data.
      </p>
       
      <p
        class="alert__error-message"
      >
        error
      </p>
    </header>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Retry
      </span>
    </button>
  </div>
  
   
</div>
`;

exports[`Transactions Card > should render the \`TransactionsCard\` component 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  
   
</div>
`;
